deployment-jobmanager-celery-do.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobmanager-celery-beat
spec:
  selector:
    matchLabels:
      app: jobmanager-celery-beat
  replicas: 1
  template:
    metadata:
      labels:
        app: jobmanager-celery-beat
    spec:
      containers:
        - name: main
          image: registry.digitalocean.com/io-cullen/tile-viewer-api:v1.0.2
          command: ["/bin/sh"]
          args: ["-c", "/app/common/start_celery_beat.sh"]
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /app/config.yaml
              subPath: config.yaml
              name: jobmanager-config-volume
      # imagePullSecrets:
      #   - name: regcred
      volumes:
        - configMap:
            name: jobmanager-config
            items:
              - key: config.yaml
                path: config.yaml
          name: jobmanager-config-volume
