deployment-periodic-do.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobmanager-periodic
spec:
  selector:
    matchLabels:
      app: jobmanager-periodic
  replicas: 1
  template:
    metadata:
      labels:
        app: jobmanager-periodic
    spec:
      containers:
        - name: celery-periodic
          image: registry.digitalocean.com/io-cullen/tile-viewer-api:v1.0.2
          command: ["/bin/sh"]
          args: ["-c", "/app/common/celery_worker_periodic.sh"]
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /app/config.yaml
              subPath: config.yaml
              name: jobmanager-config-volume
      # imagePullSecrets:
      #   - name: regcred
      volumes:
        - configMap:
            name: jobmanager-config
            items:
              - key: config.yaml
                path: config.yaml
          name: jobmanager-config-volume
