minio_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  selector:
    app: minio
  ports:
    - protocol: "TCP"
      port: 9000
      nodePort: 31900
  type: NodePort
