redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    name: redis-service
spec:
  type: NodePort
  ports:
    - port: 6379
      nodePort: 30637
      targetPort: 6379
  selector:
    app: redis
    release: redis-dev
    role: master
