service-ingress-do.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobmanager-api-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    name: gunicorn
  - port: 8080
    protocol: TCP
    name: static
  selector:
    app: jobmanager-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobmanager-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "4000m"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - tileviewer.satdat.space
    secretName: jobmanager-app-tls
  rules:
  - host: "tileviewer.satdat.space"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jobmanager-api-service
            port:
              number: 8080
